[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/bucket.png" type="Texture" id=1]
[ext_resource path="res://Scripts/waterObj_mj.gd" type="Script" id=2]
[ext_resource path="res://assets/collect_effects.png" type="Texture" id=3]
[ext_resource path="res://sounds/UIbutton_soundeffect/110393__soundscalpel-com__water-splash.wav" type="AudioStream" id=4]

[sub_resource type="Animation" id=1]
length = 0.001

[sub_resource type="Animation" id=2]
resource_name = "item_default_anim"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -10 ), Vector2( 0, -1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "Collect_anim"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 1 ), ExtResource( 3 ), ExtResource( 3 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 180.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.1, 0.5 ),
"transitions": PoolRealArray( 0.329877, 1 ),
"update": 0,
"values": [ Vector2( 0.2, 0.2 ), Vector2( 0, 0 ) ]
}

[node name="WaterObj_mj" type="Area2D"]
scale = Vector2( 0.15, 0.15 )
collision_layer = 4
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -0.749161, 4.16954 )
scale = Vector2( 0.265478, 0.331514 )
texture = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -68.585, -54.1519, -67.3944, -33.5157, -66.6008, -29.5472, -52.711, 66.0937, -40.4086, 73.6338, -9.05746, 77.6023, 7.21339, 77.9992, 36.5803, 75.2212, 47.2953, 70.0622, 51.6606, 61.7283, 58.8039, -1.76771, 63.5661, -17.2449, 65.5504, -30.7378, 68.3283, -53.3582, 56.8197, -63.6763, 30.6275, -68.8354, 0.0700836, -70.026, -23.3441, -69.2323, -46.7582, -65.2637 )

[node name="Animations" type="Node" parent="."]

[node name="Item_default_anim" type="AnimationPlayer" parent="Animations"]
root_node = NodePath("../..")
anims/RESET = SubResource( 1 )
anims/item_default_anim = SubResource( 2 )
__meta__ = {
"_editor_description_": ""
}

[node name="Collect_anim" type="AnimationPlayer" parent="Animations"]
root_node = NodePath("../..")
anims/Collect_anim = SubResource( 3 )

[node name="collectable_takenSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = -5.0

[connection signal="animation_finished" from="Animations/Collect_anim" to="." method="_on_Collect_anim_animation_finished"]
